# numaflow-python

examples/function/even_odd/: README.md  pipeline-numaflow.yaml  pyproject.toml
examples/function/event_time_filter/: example.py  pyproject.toml
examples/function/flatmap/: Makefile  example.py  pyproject.toml
examples/sink/log/: example.py  pyproject.toml
pynumaflow/function/: _dtypes.py  server.py
